Fix! - Selector `elementor:after` added spacing after the content fix

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -128,7 +128,11 @@
   position: absolute;
   opacity: 0;
   width: 0;
-  height: 0; }
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0; }
   @media (min-width: 1025px) {
     .elementor:after {
       content: 'desktop'; } }
